--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
 /* header */
 
 .header {
-    background-color: rgb(66, 60, 60);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -22,14 +21,18 @@ body {
     width: 100%;
 }
 
+.header .logo {
+    height: 2.5rem;
+}
+
 .header ul {
     display: flex;
     list-style: none;
-    font-size: 0.7rem;
+    font-size: 1rem;
 }
 
 .header ul li:first-child {
-    margin-right: 1rem;
+    margin-right: 2rem;
 }
 
 .header ul li a {
@@ -53,6 +56,7 @@ body {
 /* animated title */
 #container {
 	text-align: center;
+    transform: translateY(-5vh);
 
 }
 
@@ -65,16 +69,9 @@ body {
     font-size: 2rem;
     font-weight: 700;
     letter-spacing: 2px;
+    height: 5vw;
 }
 
-#cursor {
-    display: inline-block;
-    vertical-align: middle;
-    width: 3px;
-    height: 25px;
-    background-color:rgb(66, 60, 60);
-    animation: blink .75s step-end infinite;
-}
 
 @keyframes blink {
     from, to { 
@@ -88,7 +85,7 @@ body {
 
 /* main */
 
-.mainTitle {
+.main-title {
     font-size: 2rem;
     font-weight: 500;
     color: rgb(66, 60, 60);
@@ -96,18 +93,27 @@ body {
 }
 
 main {
-    display: flex;
-    min-height: 80vh;
+    background-image: url(./assets/ondas_bg.png);
+    background-repeat: no-repeat;
+    background-position-y: bottom;
+    min-height: 93vh;
     height: 100%;
-    min-width: 100%;
+    display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
 }
 
-.areaTexto {
+.text-box{
+    max-width: 100vh;
+    width: 82%;
+    transform: translateY(-5vh);
+}
+
+.text-area {
    resize: none;
-   width: 100vh;
+   width: 100%;
    height: 30vh;
    outline: none;
    padding: 10px;
@@ -118,18 +124,28 @@ main {
    transition: all 0.1s ease;
    font-family: "poppins", sans-serif;
    color: white;
+   
 }
 
-.areaTexto::placeholder {
+.text-area::placeholder {
     color: white;
 }
 
-.areaTexto:focus{
+.text-area:focus{
     background-color: rgb(66, 60, 60);
     transition: all 0.1s ease;
 }
 
-.botoes {
+/*Botões*/
+
+.buttons-box{
+    transform: translateY(-5vh);
+    width: 50%;
+    text-align: center;
+    min-width: 300px;
+}
+
+.button {
     font-size: 0.8rem;
     font-family: "poppins", sans-serif;
     font-weight: 600;
@@ -138,93 +154,40 @@ main {
     margin-top: 0.5rem;
     border-radius: 3px;
     margin-left: 3px;
-    box-shadow: 1px 1px 10px;
     background-color: rgb(66, 60, 60);
     color: white;
     cursor: pointer;
     transition: all 0.1s ease;
 }
 
-.botoes:hover{
+.button:hover{
     background-color: gray;
     transition: all 0.1s ease;
 }
 
-@media screen and (max-width: 500px) {
-    .areaTexto {
-      width: 40vh;
-    }
-
-    .caixaBotoes{
-        text-align: center;
-    }
-
-    .mainTitle{
-        text-align: center;
-        font-size: 1.5rem;
-    }
-
-    #text{
-        display: inline-block;
-        vertical-align: middle;
-        color: rgb(66, 60, 60);
-        font-family: "poppins", sans-serif;
-        font-style: italic;
-        font-size: 1.5rem;
-        font-weight: 700;
-        letter-spacing: 2px;
-    }
-
-    .content-container{
-        flex-direction: column;
-        width: 100%;
-        margin: 0 auto;
-    }
-
-    
-}
 
 /* Botões de compartilhamento */
 
-.shareButtons {
-    position:relative;
+.share-box {
+    width: 50%;
+    height: 30vh;
+    margin: 0 auto;
+    text-align: center;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-end;
-    margin-right: 2rem;
+    align-items: center;
+    justify-content: center;
 }
 
-.shareButtons li {
-    list-style: none;
-}
-
-.shareButtons li a {
-    text-decoration: none;
-}
-
-
-.whatsappShare i{
-    font-size: 30px;
-    text-align: center;
-    color: white;
-    background-color: #006400;
-    width: 60px;
-    height: 60px;
-    padding: 1rem;
-    border-radius: 100px;
-    margin-bottom: 10px;
-}
-
-.copyShare i{
-    font-size: 30px;
+.link-share{
+    font-size: 15px;
     text-align: center;
     color: white;
     background-color: #1e253a;
-    width: 60px;
-    height: 60px;
     padding: 1rem;
     border-radius: 100px;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 /* Caixa de conteúdo */
@@ -232,21 +195,24 @@ main {
 .content-container {
     font-family: "poppins";
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    align-items: center;
     color: rgb(66, 60, 60);
-    width: 50%;
+    width: 70%;
     margin: 0 auto;
-
 }
 
 .content-box {
-    width: 40vh;
+    width: 100%;
     background-color: white;
-    box-shadow: 0px 0px 10px 0px #000000;
+    box-shadow: 0px 0px 5px 0px #000000;
     border-radius: 5px;
     padding-top: 5px;
     padding: 5px;
     text-align: center;
+    margin:50px 0px 0px 0px;
 }
 
 .underline {
@@ -267,4 +233,68 @@ main {
     justify-content: center;
     margin-bottom: 5px;
 }
+
+
+
+
+/*@medias*/
+
+@media only screen and (min-width: 308px) and (max-width: 461px) {
+    .buttons-box{
+        text-align: center;
+        transform: translateY(-7vh);
+    }
+
+    .content-box{
+        margin: 0 auto;
+    }
+
+    .text-box{
+        margin-top: 10px;
+        transform: translateY(-7vh);
+    }
+
+    .header ul li:first-child {
+        margin-right: 1rem;
+    }
+
+    #container{
+        transform: translateY(-7vh);
+    }
+
+    #text{
+        font-size: 0.5rem
+    }
+    
+}
+
+@media screen and (min-width: 470px) and (max-width: 720px){
+    #text{
+        font-size: 1rem;
+        letter-spacing: 2px;
+    }
+
+    .main-title{
+        text-align: center;
+        font-size:1rem;
+    }
+
+}
+
+@media screen and (max-width: 820px){
+    #text{
+        font-size: 1.2rem;
+        letter-spacing: 2px;
+    }
+
+    .main-title{
+        text-align: center;
+        font-size:1.2rem;
+    }
+
+}
+
+
+
+
 
